[workspace]
resolver = "2"
members = ["poem-extensions", "poem-extensions-macro"]

[workspace.package]
version = "0.7.2"
edition = "2021"
authors = ["zihan <ZihanType@proton.me>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/ZihanType/poem-extensions"
repository = "https://github.com/ZihanType/poem-extensions"
include = ["src/**/*", "Cargo.toml"]

[workspace.dependencies]
poem-extensions-macro = { version = "0.7.2", path = "./poem-extensions-macro", default-features = false }

poem = { version = "1", default-features = false }
poem-openapi = { version = "3", default-features = false }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false }
darling = { version = "0.20", default-features = false }
thiserror = { version = "1", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
serde_json = { version = "1", default-features = false }
