[package]
name = "poem-extensions-macro"
version = "0.2.0"
edition = "2021"
authors = ["zihan <ZihanType@proton.me>"]
description = "Macros for poem-extensions."
keywords = ["poem", "open-api", "swagger", "macro"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/ZihanType/poem-extensions"
repository = "https://github.com/ZihanType/poem-extensions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.43", default-features = false }
quote = { version = "1.0.21", default-features = false }
syn = { version = "1.0.99", default-features = false }
darling = { version = "0.14.1", default-features = false }
thiserror = { version = "1.0.32", default-features = false }
