[package]
name = "poem-extensions-macro"
description = "Macros for poem-extensions."
keywords = ["poem", "open-api", "swagger", "macro"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
darling.workspace = true
thiserror.workspace = true
