[package]
name = "poem-extensions-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.35", default-features = false, features = ["test"] }
poem-openapi = { version = "2.0.5", default-features = false }
poem-extensions = { path = "../poem-extensions", version = "0.1.0" }
tokio = { version = "1.20.0", features = ["full"] }
serde_json = { version = "1.0.82", default-features = false }
