[package]
name = "poem-extensions-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.45", default-features = false, features = ["test"] }
poem-openapi = { version = "2.0.16", default-features = false }
poem-extensions = { path = "../poem-extensions" }
tokio = { version = "1.21.2", features = ["full"] }
serde_json = { version = "1.0.85", default-features = false }
