[package]
name = "poem-extensions-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { workspace = true, features = ["test"] }
poem-openapi.workspace = true
poem-extensions.workspace = true
tokio = { workspace = true, features = ["full"] }
serde_json.workspace = true
