[package]
name = "poem-openapi-api-derive"
version = "0.2.0"
edition = "2021"
authors = ["zihan <ZihanType@proton.me>"]
description = "Macro for unify OpenApi implements."
keywords = ["poem", "open-api", "swagger"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/ZihanType/poem-extensions"
repository = "https://github.com/ZihanType/poem-extensions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = "1.0.98"
