[package]
name = "poem-openapi-macro"
version = "0.1.0"
edition = "2021"
authors = ["zihan <ZihanType@proton.me>"]
description = "The macro collections for extending the Poem OpenAPI."
keywords = ["poem", "open-api", "swagger", "macro"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/ZihanType/poem-extensions"
repository = "https://github.com/ZihanType/poem-extensions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.40", optional = true }
quote = { version = "1.0.20", optional = true }
syn = { version = "1.0.98", optional = true }
darling = { version = "0.14.1", optional = true }
thiserror = { version = "1.0.31", optional = true }

[features]
default = ["uni_open_api", "response", "one_response"]

macros = ["proc-macro2", "quote", "syn"]
error = ["thiserror", "darling", "syn"]

uni_open_api = ["macros"]
response = ["macros"]
one_response = ["darling", "macros", "error"]
