[package]
name = "poem-openapi-response"
version = "0.3.0"
edition = "2021"
authors = ["zihan <ZihanType@proton.me>"]
description = "Define uniform response for Poem OpenAPI."
keywords = ["poem", "open-api", "response", "swagger"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/ZihanType/poem-extensions"
repository = "https://github.com/ZihanType/poem-extensions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.31"
poem-openapi = "2.0.1"
