[package]
name = "poem-openapi-response"
version = "0.3.0"
edition = "2021"
authors = ["zihan <ZihanType@proton.me>"]
description = "Define uniform response for Poem OpenAPI."
keywords = ["poem", "open-api", "response", "swagger"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/ZihanType/poem-extensions"
repository = "https://github.com/ZihanType/poem-extensions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.32", default-features = false }
poem-openapi = { version = "2.0.2", default-features = false }
poem-openapi-macro = { path = "../poem-openapi-macro", version = "0.1.0", default-features = false, features = ["response", "one_response"] }
