[package]
name = "poem-openapi-response"
version = "0.4.0"
edition = "2021"
authors = ["zihan <ZihanType@proton.me>"]
description = "Define uniform response for Poem OpenAPI."
keywords = ["poem", "open-api", "response", "swagger"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/ZihanType/poem-extensions"
repository = "https://github.com/ZihanType/poem-extensions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.32", default-features = false, optional = true }
poem-openapi = { version = "2.0.2", default-features = false, optional = true }
poem-openapi-macro = { path = "../poem-openapi-macro", version = "0.2.0", default-features = false, optional = true, features = ["response", "one_response", "uni_response"] }

[features]
default = ["dep:poem", "dep:poem-openapi", "dep:poem-openapi-macro"]
