[package]
name = "poem-openapi-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.31", default-features = false, features = ["test"] }
poem-openapi = { version = "2.0.1", features = ["swagger-ui"] }
poem-openapi-response = { path = "../poem-openapi-response", version = "0.3.0" }
poem-openapi-macro = { path = "../poem-openapi-macro", version = "0.1.0" }
tokio = { version = "1.19.2", features = ["full"] }
