[package]
name = "poem-openapi-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.32", default-features = false, features = ["test"] }
poem-openapi = { version = "2.0.2", default-features = false, features = ["swagger-ui"] }
poem-openapi-response = { path = "../poem-openapi-response", version = "*", default-features = false }
poem-openapi-macro = { path = "../poem-openapi-macro", version = "*", default-features = false }
tokio = { version = "1.19.2", features = ["full"], default-features = false }
